Free Manga Downloader
Project page: https://github.com/riderkick/FMD

Changelog:
(! = Important, + = Addition, - = Removal, * = Bug fix/Change/Edit, ? = Require feedback)

0.9.117.0 (future)
[*] Madokami: fixed
[-] MangaKoi: removed
[+] Added MangaHome[EN]
[-] MangaMint: removed
[+] Added MangaTail[EN]
[+] Added MangaSail[EN]
Full changes: https://github.com/riderkick/FMD/compare/0.9.118.0...0.9.118.0

0.9.117.0 (12-06-2017)
[*] Fixed empty update url, you may need to download this version manually
Full changes: https://github.com/riderkick/FMD/compare/0.9.116.0...0.9.117.0

0.9.116.0 (12-06-2017)
[*] NineManga: fixed all
[*] MyReadingManga: fixed all
Full changes: https://github.com/riderkick/FMD/compare/0.9.115.0...0.9.116.0

0.9.115.0 (11-06-2017)
[+] Added Taadd[EN]
[-] Fakku: removed, not free anymore
[-] Yomanga: removed, website down
Full changes: https://github.com/riderkick/FMD/compare/0.9.114.0...0.9.115.0

0.9.114.0 (10-06-2017)
[*] EatManga: fixed all
[*] Fixed layout
Full changes: https://github.com/riderkick/FMD/compare/0.9.113.0...0.9.114.0

0.9.113.0 (08-06-2017)
[*] Pururin: fixed all
[*] Layout changes
Full changes: https://github.com/riderkick/FMD/compare/0.9.112.0...0.9.113.0

0.9.112.0 (29-05-2017)
[*] HitomiLa: fixed download
[*] MangaGo: fixed download
Full changes: https://github.com/riderkick/FMD/compare/0.9.111.0...0.9.112.0

0.9.111.0 (23-05-2017)
[+] Added Tapas
[*] Tumangaonline: fixed all
[*] NeoProjectScan: fixed domain
[*] Various changes and bug fixes
Full changes: https://github.com/riderkick/FMD/compare/0.9.110.0...0.9.111.0

0.9.110.0 (02-05-2017)
[*] CF: fixed expired cookies
[*] KissManga: fixed download
Full changes: https://github.com/riderkick/FMD/compare/0.9.109.0...0.9.110.0

0.9.109.0 (30-03-2017)
[*] KissManga: fixed download
Full changes: https://github.com/riderkick/FMD/compare/0.9.108.0...0.9.109.0

0.9.108.0 (27-03-2017)
[*] KissManga: fixed download
[*] Luscious: rewrite all
[+] Added Pururin[H]