@@ -38,10 +38,10 @@ object MainForm: TMainForm
     Height = 526
     Top = 8
     Width = 769
-    ActivePage = tsDownload
+    ActivePage = tsOption
     Align = alClient
     ParentFont = False
-    TabIndex = 0
+    TabIndex = 3
     TabOrder = 0
     OnChange = pcMainChange
     object tsDownload: TTabSheet
@@ -2581,13 +2581,12 @@ object MainForm: TMainForm
           ClientWidth = 753
           object cbOptionMinimizeToTray: TCheckBox
             AnchorSideLeft.Control = seOptionNewMangaTime
-            AnchorSideTop.Control = seOptionNewMangaTime
+            AnchorSideTop.Control = cbOptionMinimizeOnStart
             AnchorSideTop.Side = asrBottom
             Left = 4
             Height = 19
-            Top = 159
+            Top = 182
             Width = 106
-            BorderSpacing.Top = 20
             Caption = 'Minimize to tray'
             ParentFont = False
             TabOrder = 0
@@ -2598,7 +2597,7 @@ object MainForm: TMainForm
             AnchorSideTop.Side = asrBottom
             Left = 4
             Height = 19
-            Top = 182
+            Top = 205
             Width = 177
             Caption = 'Permit only one FMD running'
             ParentFont = False
@@ -2610,7 +2609,7 @@ object MainForm: TMainForm
             AnchorSideTop.Side = asrBottom
             Left = 4
             Height = 19
-            Top = 205
+            Top = 228
             Width = 210
             Caption = 'Enable live search (slow on long list)'
             ParentFont = False
@@ -2622,7 +2621,7 @@ object MainForm: TMainForm
             AnchorSideTop.Side = asrBottom
             Left = 4
             Height = 118
-            Top = 244
+            Top = 267
             Width = 742
             Anchors = [akTop, akLeft, akRight]
             BorderSpacing.Top = 20
@@ -2814,6 +2813,19 @@ object MainForm: TMainForm
             Caption = 'New manga based on  it''s update time (days)'
             ParentColor = False
             ParentFont = False
+          end
+          object cbOptionMinimizeOnStart: TCheckBox
+            AnchorSideLeft.Control = seOptionNewMangaTime
+            AnchorSideTop.Control = seOptionNewMangaTime
+            AnchorSideTop.Side = asrBottom
+            Left = 4
+            Height = 19
+            Top = 159
+            Width = 112
+            BorderSpacing.Top = 20
+            Caption = 'Minimize on start'
+            ParentFont = False
+            TabOrder = 7
           end
         end
         object tsView: TTabSheet
@@ -5309,8 +5321,8 @@ object MainForm: TMainForm
   object pmMangaList: TPopupMenu
     Images = IconList
     OnPopup = pmMangaListPopup
-    Left = 128
-    Top = 272
+    Left = 382
+    Top = 238
     object miMangaListViewInfos: TMenuItem
       Caption = 'View manga infos'
       Bitmap.Data = {
@@ -5461,8 +5473,8 @@ object MainForm: TMainForm
   end
   object pmUpdate: TPopupMenu
     ParentBidiMode = False
-    Left = 128
-    Top = 144
+    Left = 382
+    Top = 110
     object mnUpdateList: TMenuItem
       Caption = 'Update manga list'
       OnClick = mnUpdateListClick
@@ -5484,8 +5496,8 @@ object MainForm: TMainForm
     end
   end
   object IconList: TImageList
-    Left = 24
-    Top = 136
+    Left = 278
+    Top = 102
     Bitmap = {
       4C691700000010000000100000004F4F4F005050500052525200535353005454
       54155555553E555555555555556355555563555555555555553E545454155353
@@ -6227,8 +6239,8 @@ object MainForm: TMainForm
     }
   end
   object IconDL: TImageList
-    Left = 24
-    Top = 184
+    Left = 278
+    Top = 150
     Bitmap = {
       4C69090000001000000010000000FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
@@ -6524,8 +6536,8 @@ object MainForm: TMainForm
   object IconMed: TImageList
     Height = 48
     Width = 48
-    Left = 27
-    Top = 268
+    Left = 328
+    Top = 238
     Bitmap = {
       4C69010000003000000030000000FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
