@@ -11,6 +11,7 @@ Changelog:
 [-] MangaMint: removed
 [+] Added MangaTail[EN]
 [+] Added MangaSail[EN]
+[+] Added option to minimize on start
 Full changes: https://github.com/riderkick/FMD/compare/0.9.118.0...0.9.118.0
 
 0.9.117.0 (12-06-2017)
